--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@
   --bg-color: #00163f;
   --font-color: #ffffff;
   --btn-bg-color: #ffffff;
-  --accent-color: #e:\NFT\Advertisement\Grand Office.png;
+  --accent-color: #be7efe;
   --header-shadow: #000 0px 0px 5px;
 }
 
