--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@
   --font-primary: 'Poppins', sans-serif;
   --font-secondary: 'Arvo', serif;
   --font-code: 'Roboto', monospace;
-  --bg-color: rgb(0, 22, 63);
+  --bg-color: #ffffff;
   --font-color: #ffffff;
   --btn-bg-color: #D3202A;
   --accent-color: #47BBD6;
