commit on "main"

--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@
   --font-color: #ffffff;
   --btn-bg-color: #D3202A;
   --accent-color: #47BBD6;
-  --header-shadow: #ffffff 0px 0px 5px;
+  --header-shadow: #010203 0px 0px 5px;
 }
 
 * {
