--- a/css/style.css
+++ b/css/style.css
@@ -10,8 +10,8 @@
   --font-code: 'Roboto', monospace;
   --bg-color: #ffffff;
   --font-color: #ffffff;
-  --btn-bg-color: #D3202A;
-  --accent-color: #47BBD6;
+  --btn-bg-color: #47bbd6;
+  --accent-color: #d3202a;
   --header-shadow: #010203 0px 0px 5px;
 }
 
