--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@
   --font-secondary: 'Arvo', serif;
   --font-code: 'Roboto', monospace;
   --bg-color: #ffffff;
-  --font-color: #ffffff;
+  --font-color: #ececed;
   --btn-bg-color: #47bbd6;
   --accent-color: #d3202a;
   --header-shadow: #010203 0px 0px 5px;
