--- a/css/style.css
+++ b/css/style.css
@@ -8,8 +8,8 @@
   --font-primary: 'Poppins', sans-serif;
   --font-secondary: 'Arvo', serif;
   --font-code: 'Roboto', monospace;
-  --bg-color: #ffffff;
-  --font-color: #ececed;
+  --bg-color: #ececed;
+  --font-color: #ffffff;
   --btn-bg-color: #47bbd6;
   --accent-color: #d3202a;
   --header-shadow: #010203 0px 0px 5px;
