--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@
   --bg-color: #ececed;
   --font-color: #de202a;
   --btn-bg-color: #47bbd6;
-  --accent-color: #d3202a;
+  --accent-color: #ffffff;
   --header-shadow: #010203 0px 0px 5px;
 }
 
