--- a/css/style.css
+++ b/css/style.css
@@ -64,7 +64,7 @@ header .container {
   background: var(--btn-bg-color);
   color: var(--accent-color);
   font-family: var(--font-secondary);
-  font-style: italic;
+  font-style: Bold;
   font-weight: bold;
   font-size: 1rem;
   text-transform: capitalize;
@@ -117,15 +117,15 @@ section {
 .countdown .clock-item .count-number {
   background: var(--accent-color);
   color: var(--font-color);
-  font-size: 2rem;
-  font-weight: 700;
+  font-size: 1rem;
+  font-weight: 500;
   font-family: var(--font-secondary);
   padding: 1rem;
   display: inline-block;
   width: 100%;
   text-align: center;
   line-height: 1;
-  border-radius: 4px 4px 0 0;
+  border-radius: 3px 3px 0 0;
 }
 .countdown .clock-item .count-text {
   background: var(--btn-bg-color);
@@ -144,7 +144,7 @@ section {
   text-shadow: 2px 2px 0 var(--accent-color);
   font-style: italic;
   margin: 2rem 0;
-  font-size: 3.5rem;
+  font-size: 2.5rem;
   text-align: center;
 }
 
